[BLC-727] Fixed clipped +/- button images in FilterBuilder

--- a/admin/src/main/webapp/admin/resources/css/admin.css
+++ b/admin/src/main/webapp/admin/resources/css/admin.css
@@ -131,7 +131,12 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
     margin-bottom: 0;
 }
 
-.windowHeader img {vertical-align: top;}
+.windowHeader img,
+.imgButton img,
+.imgButtonOver img,
+.imgButtonSelected img,
+.imgButtonSelectedDisabled img,
+.imgButtonSelectedOver img {vertical-align: top;}
 
 /*============================= Catalog -> Offers =============================*/
 /*===============================================================================*/
